[package]
name = "svg-to-png"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that auto-converts SVG files to PNG on file changes"
license = "MIT"
repository = "https://github.com/somenoe/svg-to-png"
readme = "README.md"
keywords = ["cli", "svg", "png", "watch"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "8.2"
resvg = "0.45.1"
usvg = "0.45.1"
fontdb = "0.23"
tiny-skia = "0.11"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24"
assert_fs = "1.1"
predicates = "3.1"
